Fixed heading spacing

--- a/inst/includes/stylesheets/custom.css
+++ b/inst/includes/stylesheets/custom.css
@@ -11,6 +11,7 @@ header {
 h1, h2, h3, h4, h5, h6, .subtitle {
     color: #383336;
     font-family: 'DroidSansBold', sans-serif;
+    margin: 0 0 15px;
 }
 
 .subtitle {
